@@ -21,6 +21,7 @@
                     <argLine>
                         @{argLine}
                         --add-opens javamm.compiler/academy.devonline.javamm.compiler.component.impl=ALL-UNNAMED
+                        --add-opens javamm.compiler/academy.devonline.javamm.compiler.component.impl.util=ALL-UNNAMED
                         --add-opens
                         javamm.compiler/academy.devonline.javamm.compiler.component.impl.operation.simple=ALL-UNNAMED
                         --add-opens javamm.compiler/academy.devonline.javamm.compiler.integration=ALL-UNNAMED
